--- a/template/index.html
+++ b/template/index.html
@@ -51,24 +51,16 @@
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Inicio</a></li>
-          <li class="drop-down"><a href="#productos">Productos</a></li>
-          <li><a href="#quienessomos">Acerca De Nosoros</a></li>
-          <li><a href="#servicios">Servicios</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#services">Servicios</a></li>
+          <li><a href="#portfolio">Productos</a></li>
           <li><a href="#team">Equipo</a></li>
+          <li class="drop-down"><a href="">Productos</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Hierbas</a></li>
+              <li><a href="#">Plantas Medicinales</a></li>
+              <li><a href="#">Infusiones</a></li>
+              <li><a href="#">Aceites</a></li>
             </ul>
           </li>
           <li><a href="#contact">Contacto</a></li>
@@ -85,14 +77,14 @@
     <div class="container">
 
       <div class="intro-img">
-        <img src="img/intro-img.svg" alt="" class="img-fluid">
+        <img src="img/imagen-intro.svg" alt="" class="img-fluid">
       </div>
 
       <div class="intro-info">
-        <h2>We provide<br><span>solutions</span><br>for your business!</h2>
+        <h2>Hierbas y plantas<br><span>medicinales</span><br>para tu bienestar</h2>
         <div>
-          <a href="#about" class="btn-get-started scrollto">Get Started</a>
-          <a href="#services" class="btn-services scrollto">Our Services</a>
+          <a href="#about" class="btn-get-started scrollto">Conocenos</a>
+          <a href="#services" class="btn-services scrollto">Servicios</a>
         </div>
       </div>
 
@@ -108,15 +100,15 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>About Us</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Nosotros</h3>
+          <p></p>
         </header>
 
         <div class="row about-container">
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Somos un grupo de jovenes estudiantes y emprendedores, trayendo informacion y los mejores productos de hierbas medicinales, plantas y aceites, para el bienestar personal.
             </p>
 
             <div class="icon-box wow fadeInUp">
