--- a/template/index.html
+++ b/template/index.html
@@ -179,143 +179,143 @@
       <div class="container">
 
         <header class="section-header">
-          <h3 class="section-title">Our Portfolio</h3>
+          <h3 class="section-title">Productos</h3>
         </header>
 
         <div class="row">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">Todo</li>
+              <li data-filter=".filter-digestivos">Digestivos</li>
+              <li data-filter=".filter-ansioliticos">Ansioliticos</li>
+              <li data-filter=".filter-diureticos">Diureticos</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digestivos">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/digestivo1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">App 1</a></h4>
-                <p>App</p>
+                <h4><a href="#">Manzanilla</a></h4>
+                <p>Flor</p>
                 <div>
-                  <a href="img/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/digestivo1.png" data-lightbox="portfolio" data-title="Manzanilla" class="link-preview" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-diureticos" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/diuretico1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Web 3</a></h4>
-                <p>Web</p>
+                <h4><a href="#">Cola De Caballo</a></h4>
+                <p>Tallo</p>
                 <div>
-                  <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/diuretico1.png" class="link-preview" data-lightbox="portfolio" data-title="Cola De Caballo" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-diureticos" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/diuretico2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">App 2</a></h4>
-                <p>App</p>
+                <h4><a href="#">Enebro</a></h4>
+                <p>Semillas</p>
                 <div>
-                  <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/diuretico2.png" class="link-preview" data-lightbox="portfolio" data-title="Enebro" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ansioliticos">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/card2.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/ansiolitico1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Card 2</a></h4>
-                <p>Card</p>
+                <h4><a href="#">Tilo</a></h4>
+                <p>Flor</p>
                 <div>
-                  <a href="img/portfolio/card2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/ansiolitico1.png" class="link-preview" data-lightbox="portfolio" data-title="Tilo" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digestivos" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/digestivo2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Web 2</a></h4>
-                <p>Web</p>
+                <h4><a href="#">Poleo</a></h4>
+                <p>Hoja</p>
                 <div>
-                  <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/digestivo2.png" class="link-preview" data-lightbox="portfolio" data-title="Poleo" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digestivos" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/digestivo3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">App 3</a></h4>
-                <p>App</p>
+                <h4><a href="#">Angelica</a></h4>
+                <p>Hojas</p>
                 <div>
-                  <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/digestivo3.png" class="link-preview" data-lightbox="portfolio" data-title="Angelica" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ansioliticos">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/card1.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/ansiolitico2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Card 1</a></h4>
-                <p>Card</p>
+                <h4><a href="#">Toronjil</a></h4>
+                <p>Hoja</p>
                 <div>
-                  <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/ansiolitico2.png" class="link-preview" data-lightbox="portfolio" data-title="Toronjil" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ansioliticos" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/card3.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/ansiolitico3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Card 3</a></h4>
-                <p>Card</p>
+                <h4><a href="#">Lavanda</a></h4>
+                <p>Hoja</p>
                 <div>
-                  <a href="img/portfolio/card3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/ansiolitico3.png" class="link-preview" data-lightbox="portfolio" data-title="Lavanda" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-diureticos" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/diuretico3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Web 1</a></h4>
-                <p>Web</p>
+                <h4><a href="#">Gramilla</a></h4>
+                <p>Hoja</p>
                 <div>
-                  <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <a href="img/portfolio/diuretico3.png" class="link-preview" data-lightbox="portfolio" data-title="Gramilla" title="Vista previa"><i class="ion ion-eye"></i></a>
+                  <a href="#" class="link-details" title="Ampliar imagen"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
@@ -333,7 +333,7 @@
       <div class="container-fluid">
 
         <div class="section-header">
-          <h3>Contact Us</h3>
+          <h3>Contacto</h3>
         </div>
 
         <div class="row wow fadeInUp">
