--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,18 +1,12 @@
-/*
-  Theme Name: NewBiz
-  Theme URL: https://bootstrapmade.com/newbiz-bootstrap-business-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
 
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 
 body {
-  background: rgb(193, 233, 193);
+  background: rgb(233, 243, 234);
   color: #444;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Encode Sans", sans-serif;
 }
 
 a {
@@ -39,7 +33,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
@@ -501,7 +495,7 @@ h6 {
   overflow: hidden;
   border-radius: 10px;
   margin: 0 10px 40px 10px;
-  background: rgb(197, 236, 199);
+  background: rgb(216, 240, 218);
   box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
   transition: all 0.3s ease-in-out;
 }
